--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,22 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.1'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
+// https://mvnrepository.com/artifact/com.h2database/h2
+//    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+
+//    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+//    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.10.3'
+
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
